--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<body>
-    <p>
-        Hello and welcome to this cool new site
-    </p>
-</body>
+<!DOCTYPE html>
+<html>
+    <body>
+        <h1>Hello World</h1>
+        <p>Brody Liudzius's GitHub Pages site.</p>
+    </body>
+</html>
