--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <body>
         <h1>Hello World</h1>
         <p>Brody Liudzius's GitHub Pages site.</p>
+        <a href="/CECS456/Decision_Tree.html">Link 1</a>
     </body>
 </html>
