--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <body>
-        <h1>Hello World</h1>
-        <p>Brody Liudzius's GitHub Pages site.</p>
-        <a href="/CECS456/Decision_Tree_Induction">Link 1</a>
-    </body>
-</html>
+<!DOCTYPE html><html lang="en_us"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="author" content="Brody Liudzius"><meta name="description" content="Brody Liudzius's GitHub Pages"><link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/andrewh0/okcss@1/dist/ok.min.css"><script type="module" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async id="MathJax-script"></script></head><body><article><h1>Brody Liudzius's GitHub Pages</h1><hr><p>Currently this is just a temporary site where I can post my class notes.</p><h2>Spring 2024</h2><ul><li><a href="/CECS463.html">CECS 463</a></li></ul></article></body></html>
