--- a/lecture.html
+++ b/lecture.html
@@ -8,7 +8,7 @@ Challenges in verification:
 - Temporal requirements
 - Scalability
 
-Predictive runctime verification of cyber-physcial system:
+Predictive runtime verification of cyber-physcial system:
 - Monitor the system while it is running, alert before the error happens
 - How to do this without Markov assumption and without parametric model
  
